# src/routes/swagger.json
@@ -44,7 +44,7 @@
                 },
                 "password": {
                   "type": "string",
-                  "example": "yukipassword"
+                  "example": "#1Yukisecret"
                 },
                 "gender": {
                   "type": "string",
@@ -117,6 +117,9 @@
           },
           "500": {
             "description": "Internal Server Error"
+          },
+          "Users": {
+            "description": ""
           }
         },
         "security": [
@@ -153,7 +156,7 @@
                 },
                 "password": {
                   "type": "string",
-                  "example": "yukipassword"
+                  "example": "#1Yukisecret"
                 },
                 "gender": {
                   "type": "string",
@@ -240,7 +243,7 @@
                 },
                 "password": {
                   "type": "string",
-                  "example": "yukisomapassword"
+                  "example": "3Yukisecret"
                 },
                 "gender": {
                   "type": "string",
@@ -287,6 +290,9 @@
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -432,21 +438,6 @@
         "description": "",
         "parameters": [
           {
-            "name": "name",
-            "in": "query",
-            "type": "string"
-          },
-          {
-            "name": "location",
-            "in": "query",
-            "type": "string"
-          },
-          {
-            "name": "category",
-            "in": "query",
-            "type": "string"
-          },
-          {
             "name": "authorization",
             "in": "header",
             "type": "string"
@@ -464,6 +455,9 @@
           },
           "500": {
             "description": "Internal Server Error"
+          },
+          "Op.or": {
+            "description": ""
           }
         },
         "security": [
@@ -633,28 +627,13 @@
             "schema": {
               "type": "object",
               "properties": {
-                "name": {
+                "in": {
                   "example": "any"
                 },
                 "description": {
                   "example": "any"
                 },
-                "location": {
-                  "example": "any"
-                },
-                "latitude": {
-                  "example": "any"
-                },
-                "longitude": {
-                  "example": "any"
-                },
-                "accessibility": {
-                  "example": "any"
-                },
-                "category": {
-                  "example": "any"
-                },
-                "rating": {
+                "schema": {
                   "example": "any"
                 }
               }
@@ -723,45 +702,19 @@
     },
     "/login/": {
       "post": {
-        "tags": [
-          "Login"
-        ],
-        "summary": "Create new login",
         "description": "",
         "parameters": [
           {
             "name": "body",
             "in": "body",
-            "description": "This endpoint will create login for a new user",
             "schema": {
               "type": "object",
               "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "object"
+                "email": {
+                  "example": "any"
                 },
-                "properties": {
-                  "type": "object",
-                  "properties": {
-                    "email": {
-                      "type": "object",
-                      "properties": {
-                        "example": {
-                          "type": "string",
-                          "example": "yuki@email.com"
-                        }
-                      }
-                    },
-                    "password": {
-                      "type": "object",
-                      "properties": {
-                        "example": {
-                          "type": "string",
-                          "example": "yukipassword"
-                        }
-                      }
-                    }
-                  }
+                "password": {
+                  "example": "any"
                 }
               }
             }
